Fix Display of Right Sidebar Ads on Small Screens

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -213,10 +213,12 @@ h1, h2, h3, h4, h5
   .widget_recent_entries ul
     padding-left: 10px
   /* Show Multiple Ads per Row on Small Screens */
-  .widget#text-2 > div
+  .widget#text-22 > div
     text-align: center
     > div
       display: inline-block
+    > p
+      display: none
   /* Newsletter Signup Widget */
   .widget_wysija_cont
     /* Center Submit Button */
